src/main/fabric8/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: analytics-integration
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: analytics-integration
  type: ClusterIP
  sessionAffinity: None
