src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: analytics-integration
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: analytics-integration
